# os-assignment

./: caller.h  cd_pwd.h  echo.h  exit_shell.h  global_var.h  hist.txt  history.h  input.h  loader.c  ls.h  main.c  makefile  nightwatch.h  proc.h  process.h  readme.md
assignment1-with-bonus/: Makefile
assignment1-with-bonus/launcher/: Makefile  launch.c
assignment1-with-bonus/loader/: Makefile  loader.c  loader.h
group103-simple-multithreader/: readme.md  simple-multithreader.h
group103-simplescheduler/: README  a.out  b.out  c.out  custerrors.h  d.out  filelocks.h  history.c  history.h  main.c  run.sh  simplesched.c  simplesched_old.c  ss  subsched.h  texts.c
group103-simpleshell/: README.md  custerrors.c  custerrors.h  history.c  history.h  main.c  run.sh  texts.c  texts.h
group103-smartloader-with-bonus/: run.sh
group103-smartloader-with-bonus/loader/: loader.c  loader.h
group103-smartloader-with-bonus/test/: fib copy.c  fib.c
os_as3/: CMakeLists.txt  a.out  custerrors.c  e.out  filelocks.c  main.c  simplesched.c  ss  subsched.c  subsched.h  texts.h
